# graphics

./: .gitignore  README.md
Lab1/: .CMakeLists.txt.swp  .color_coded  .ycm_extra_conf.py  CMakeLists.txt
Lab1/Lab1/: Defines.cpp  Defines.h  FrameBuffer.h  Lab1.cpp  MyRectangle.cpp  MyRectangle.h  Square.cpp  Square.h
Lab1/Lab1.xcodeproj/: project.pbxproj
Lab1/Lab1.xcodeproj/project.xcworkspace/xcuserdata/tommy.xcuserdatad/: UserInterfaceState.xcuserstate
Lab1/Lab1.xcodeproj/xcuserdata/tommy.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Lab1/Lab1/shapes/: MyRectangle.cpp  Triangle.cpp
Lab1/src/Lab1/headers/: Lab1.h  MyRectangle.h  Parallelogram.h  Triangle.h
Lab1/src/Lab1/sources/: Parallelogram.cpp  Square.cpp
Lab2/: .color_coded  .ycm_extra_conf.py  CMakeLists.txt
Lab2/source/: Defines.cpp  FrameBuffer.cpp  Lab2.cpp
Lab2/source/headers/: Defines.h  FrameBuffer.h  Lab2.h
Lab3/: .color_coded  .ycm_extra_conf.py  CMakeLists.txt
Lab3/source/: Defines.cpp  Lab3.cpp
Lab3/source/headers/: Defines.h  Lab3.h
Lab4/: CMakeLists.txt
Lab4/source/: Cylinder.cpp  Ellipsoid.cpp  Plane.cpp  QuadricSurface.cpp  RasterUser.cpp  Ray.cpp  RayTracer.cpp  SimplePolygon.cpp
Lab4/source/headers/: Cylinder.h  Defines.h  Ellipsoid.h  Lights.h  Material.h  Plane.h  RasterUser.h  Ray.h  RayTracer.h  SimplePolygon.h
Test/: .color_coded  .ycm_extra_conf.py  CMakeLists.txt
Test/src/headers/: Square.h
Test/src/sources/: FrameBuffer.cpp  Lab1.cpp
lab6/: .color_coded  .ycm_extra_conf.py  CMakeLists.txt
lab6/source/: Lab.cpp
lab6/source/headers/: Defines.h
lab7/: .color_coded  .ycm_extra_conf.py  CMakeLists.txt
lab7/source/: Camera.cpp  ClippingPlane.cpp  FrameBuffer.cpp  Lab.cpp  PerFragmentOperations.cpp  PerVertexOperations.cpp  Rasterization.cpp  ShapeStructs.cpp
lab7/source/headers/: Camera.h  Defines.h  Lights.h  ShapeStructs.h
